<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/order_by_titles"
        android:entryValues="@array/order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_page_size_default"
        android:inputType="number"
        android:key="@string/settings_page_size_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_size_title" />

    <EditTextPreference
        android:inputType="textCapWords"
        android:key="@string/settings_keyword_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_keyword_title" />

</PreferenceScreen>